--- a/deploying/compose.yaml
+++ b/deploying/compose.yaml
@@ -3,27 +3,32 @@ services:
     build:
       context: .
     ports:
-      - "8080:8080"
+      - 8080:8080
     develop:
       watch:
-        - path: .
-          action: rebuild
+        - action: rebuild
+          path: .
   db:
-    image: postgres:latest
+    image: postgres
     restart: always
     user: postgres
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydb
+    secrets:
+      - db-password
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=example
+      - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
     expose:
-      - "5432"
+      - 5432
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "user"]
+      test: [ "CMD", "pg_isready" ]
       interval: 10s
       timeout: 5s
       retries: 5
 volumes:
-  db_data:
+  db-data:
+secrets:
+  db-password:
+    file: db/password.txt
+
