--- a/java/containerize2/pom.xml
+++ b/java/containerize2/pom.xml
@@ -47,6 +47,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.6.18.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
