--- a/java/containerize2/src/main/resources/application.properties
+++ b/java/containerize2/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.username=admin
+spring.datasource.password=admin123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.format_sql=true
