--- a/java/containerize2/src/main/resources/application.properties
+++ b/java/containerize2/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
